# Snek

./: .gitmodules  CMakeLists.txt  Forge.toml  README.md
src/: common.h  main.c
src/bytecode/: chunk.c  chunk.h  debug.c  debug.h  memory.c  memory.h  value.c  value.h
src/compiler/: compiler.c  compiler.h  parser.c  parser.h
src/scanner/: scanner.c  scanner.h
src/vm/: vm.c  vm.h
tests/: test_chunk.c  test_main.c  test_memory.c
